2005-10-31  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/totem-playlist.c: (treeview_row_changed),
	(totem_playlist_class_init):
	* src/totem-playlist.h:
	* src/totem.c: (totem_action_seek), (totem_action_seek_relative),
	(item_activated_cb), (totem_callback_connect),
	(playlist_widget_setup):
	Play the file from the beginning when the playlist item is
	double-clicked (Closes: #320272)

2005-10-31  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: Added application/x-trash as an
	ignored mime-type, so that backup files are not added to the playlist
	(Closes: #320056)

2005-10-30  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_add_pls_with_contents), (totem_pl_parser_add_pls),
	(totem_pl_parser_get_extinfo_title), (totem_pl_parser_add_m3u):
	Parse as .pls files .m3u playlists with [playlist] at the beginning
	(Closes: #318558)

2005-10-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_load_media),
	(totem_action_load_media_device), (totem_action_play_media_device),
	(totem_action_remote): stop the currently playing song when
	loading a media, and playing it fails (Closes: #317119)

2005-10-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_load_media_device): avoid warnings
	when trying to play a data CD using the "Play Disc" menu

2005-10-28  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: Make the preference dialog centred on the parent
	instead of showing it at the top-left

2005-10-23  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2005-10-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_set_reorderable),
	(totem_playlist_set_playing): only jump to the current cell if we
	are setting it as playing, only emit the "changed" signal if the
	currently playing item changed
	This fix the scroll jumping when simply selecting an item in the
	playlist

2005-10-22  Bastien Nocera  <hadess@hadess.net>
