@@ -1,3 +1,9 @@
+2005-11-02  Bastien Nocera  <hadess@hadess.net>
+
+	* NEWS: upd
+	* src/totem-menu.c: (add_device_to_menu): Disable menu items for
+	CD drives with blank CDs in them (Helps: #320269)
+
 2005-10-31  Bastien Nocera  <hadess@hadess.net>
 
 	* NEWS: upd
